--- a/4ciclos/index.html
+++ b/4ciclos/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Arreglos y objetos</title>
+    <title>Ciclos</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      body {
+        background: #2c3e50;
+      }
+    </style>
     <script defer src="./app.js"></script>
   </head>
   <body></body>
