--- a/6DOM/index.html
+++ b/6DOM/index.html
@@ -7,30 +7,41 @@
     <style>
       body {
         background: #2c3e50;
+        display: flex;
+        justify-content: center;
+        color: white;
+        align-items: center;
+        flex-direction: column;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
       }
-      #nodos{
-
-      }
-      .text-sm{
-
+      .button {
+        background: #2980b9;
+        color: white;
+        border-radius: 3px;
+        padding: 0.4rem 1.2rem;
+        border: 0;
+        cursor: pointer;
       }
     </style>
-    <script defer src="./app.js"></script>
+    <script defer src="./dom.js"></script>
   </head>
   <body>
-
+    <p class="text"></p>
+    <button class="button">💛</button>
     <!-- Estructuda del DOM -->
     <!-- 
       <p> -> Nodo
       class -> atributo
       texto -> contenido
      -->
+    <!-- <p class="text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, neque.</p>
     <p class="text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, neque.</p>
     <p class="text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, neque.</p>
-    <p class="text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, neque.</p>
-    <p class="text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, neque.</p>
+    <p class="text-sm">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, neque.</p> -->
 
-    <section id="nodos" class="posts">
+    <!-- <section id="nodos" class="posts">
       <article class="card">
         <h1></h1>
         <img src="" alt="">
@@ -46,6 +57,6 @@
         <img src="" alt="">
         <p></p>
       </article>
-    </section>
+    </section> -->
   </body>
 </html>
