--- a/7ejercicios/index.html
+++ b/7ejercicios/index.html
@@ -14,7 +14,7 @@
       font-size: 5em;
     }
   </style>
-  <script defer src="./src/condicionales.js"></script>
+  <!-- <script defer src="./src/condicionales.js"></script> -->
 </head>
 <body>
   <h1></h1>
